# overnight-experimenter

./: .gitignore  README.md  cli.py  pyproject.toml  runner.py
.github/workflows/: publish-pypi.yml
examples/prompt-optimizer/: evaluate.sh  program.md
examples/prompt-optimizer/workspace/: prompt.txt
examples/python-perf/: evaluate.sh  program.md
examples/python-perf/workspace/: solve.py
src/overnight_experimenter/: __init__.py  cli.py  report.py
src/overnight_experimenter/templates/: program.md
templates/: evaluate.sh
